Changes related to buisness hours and staff

--- a/AngularMvcProject/Views/Shared/_Layout.cshtml
+++ b/AngularMvcProject/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
     <script src="../Content/Assets/js/bootstrap.min.js"></script>
     <script src="../Content/Assets/js/jquery.js"></script>
     <script src="../App/controller/wizard.js"></script>
+    <script src="../App/service/service.js"></script>
+ 
 </head>
 <body>
     @*<div class="navbar navbar-inverse navbar-fixed-top">
