Changes related to add and delete(staff) and add service

--- a/AngularMvcProject/Views/wizard/wizard.cshtml
+++ b/AngularMvcProject/Views/wizard/wizard.cshtml
@@ -476,7 +476,7 @@
 
                                                     </div>
                                                 </div><div class="col-md-1 col-sm-1">
-                                                    <a href="#" class="close_img" ng-click="removeRow(company.staffName)"><img src="../Content/Assets/images/close-img.png"></a>
+                                                    <a href="#" class="close_img" ng-click="removeRow(company.Id)"><img src="../Content/Assets/images/close-img.png"></a>
                                                 </div>
                                             </div>
 
@@ -574,7 +574,7 @@
                                                                 </span>
                                                             </button>
                                                             <ul class="dropdown-menu" style="display:block" aria-labelledby="dLabel" ng-hide="showStaffBinded[$index]">
-                                                                <li>Who can perform this service?</li>
+                                                                <li>Who can perform this service?</li><li><input type="checkbox" name="" value="" ng-click="toggleSelection(item)"> All Staff</li>
                                                                 <li ng-repeat="item in service.staff">
                                                                     <input type="checkbox" name="selectedFruits[]"
                                                                            value="{{item.staffEmail}}"
@@ -614,7 +614,7 @@
                                                                 </button>
                                                                 <button type="submit" class="btn btn-default" ng-click="addServiceItem()">Add</button>
                                                                 <ul class="dropdown-menu" style="display:block;" aria-labelledby="dLabel" ng-hide="showStaff">
-                                                                    <li>Who can perform this service?</li>
+                                                                    <li>Who can perform this service?</li><li><input type="checkbox" name="" value="" ng-click="toggleSelection(item)"> All Staff</li>
                                                                     <li ng-repeat="staff in staffInfo">
                                                                         <input type="checkbox" ng-click="toggleSelection(staff)" ng-model="staff.confirmed"> {{staff.staffName}}
 
