--- a/AngularMvcProject/Views/wizard/wizard.cshtml
+++ b/AngularMvcProject/Views/wizard/wizard.cshtml
@@ -440,9 +440,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
-
-
                                     </div>
                                 </div>
                             </div>
@@ -586,11 +583,11 @@
                                                                 </span>
                                                             </button>
                                                             <ul class="dropdown-menu" style="display:block" aria-labelledby="dLabel" ng-hide="showStaffBinded[$index]">
-                                                                <li>Who can perform this service?</li><li><input type="checkbox" name="" value="" ng-click="toggleSelection(item)"> All Staff</li>
+                                                                <li>Who can perform this service?</li><li><input type="checkbox" name="" value="" ng-click="togglealldataSelection(service)" ng-model="service.AllStaffChecked"> All Staff</li>
                                                                 <li ng-repeat="item in service.staff">
                                                                     <input type="checkbox" name="selectedFruits[]"
                                                                            value="{{item.staffEmail}}"
-                                                                           ng-click="toggleSelection(item)" ng-model="item.confirmed"> {{item.FirstName}}
+                                                                           ng-click="toggledataSelection(service)" ng-model="item.confirmed"> {{item.FirstName}}
                                                                 </li>
                                                             </ul>
                                                         </div>
