variable rename correction

--- a/AngularMvcProject/Views/wizard/wizard.cshtml
+++ b/AngularMvcProject/Views/wizard/wizard.cshtml
@@ -583,7 +583,7 @@
                                                                 </span>
                                                             </button>
                                                             <ul class="dropdown-menu" style="display:block" aria-labelledby="dLabel" ng-hide="showStaffBinded[$index]">
-                                                                <li>Who can perform this service?</li><li><input type="checkbox" name="" value="" ng-click="togglealldataSelection(service)" ng-model="service.AllStaffChecked"> All Staff</li>
+                                                                <li>Who can perform this service?</li><li><input type="checkbox" name="" value="" ng-click="togglealldataSelection(service)" ng-model="service.AllAssignStaffChecked"> All Staff</li>
                                                                 <li ng-repeat="item in service.staff">
                                                                     <input type="checkbox" name="selectedFruits[]"
                                                                            value="{{item.staffEmail}}"
