Changes regarding bugs

--- a/AngularMvcProject/Views/SignUp/SignUp.cshtml
+++ b/AngularMvcProject/Views/SignUp/SignUp.cshtml
@@ -32,24 +32,25 @@
 
                     <div class="sign_form">
 
-                        <form name="myForm" novalidate>
+                        <form name="myForm" ng-submit="submitTheForm()" novalidate class="css-form">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Name" ng-model="username">
+                                <input type="text" class="form-control" placeholder="name" ng-model="username" required>
+
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control" placeholder="Email" ng-model="Email">
+                                <input type="email" class="form-control" placeholder="Email" ng-model="Email" required>
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" placeholder="Password" ng-model="Password">
+                                <input type="password" class="form-control" placeholder="Password" ng-model="Password" required>
                             </div>
 
-                            <button type="submit" ng-click="submitTheForm()" class="btn btn-default submit_btn">Create My Account!</button>
+                            <button type="submit" ng-disabled="myForm.$invalid" class="btn btn-default submit_btn">Create My Account!</button>
                         </form>
                     </div>
                     <img src="~/Content/Assets/images/cloud.png" alt="Cloud" class="left_img">
                 </div>
                 @*<div style=" width: 100px; text-align: center; top: 0; position: absolute; left: 45%; right: 50%; z-index: 999999;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow;" ng-bind="MessageText"></span></div>*@
-                <div style=" width: 100px; text-align: center; top: 0; position: absolute; left: 45%; right: 50%; z-index: 999999;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow;" ng-bind="MessageText"></span></div>
+                <div style=" width 100px; text-align center; top 0; position absolute; left 45%; right 50%; z-index 999999;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow;" ng-bind="MessageText"></span></div>
             </div>
         </div>
     </div>
@@ -65,3 +66,4 @@
     </script>-->
 </body>
 </html>
+
