--- a/AngularMvcProject/Views/wizard/wizard.cshtml
+++ b/AngularMvcProject/Views/wizard/wizard.cshtml
@@ -307,7 +307,7 @@
                 <div class="wizar_bg"></div>
                 <div class="stepwizard">
 
-                    <div class="stepwizard-row setup-panel active_div2 " >
+                    <div class="stepwizard-row setup-panel active_div2 ">
                         <div class="stepwizard-step" id="divstep1">
                             <p>Welcome</p>
                             <a href="#step-1" type="button" class="btn btn-primary btn-circle" id="step1">
@@ -343,7 +343,7 @@
                 <div class="container_div">
 
                     <div class="row setup-content" id="step-1" ng-hide="firstStep">
-                        <form ng-submit="submitInfo()" name="step1">
+                        <form ng-submit="submitInfo()" name="step1" novalidate class="css-form">
                             <div class="col-xs-12">
                                 <div class="col-md-12">
                                     <div class="welcome_div">
@@ -359,8 +359,8 @@
                                             </div>
                                             <div class="col-md-4 col-sm-4 col-xs-4">
                                                 <div class="setmore back_btn">
-                                                    <button type="button" class="btn btn-default"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
-                                                    <button class="btn btn-primary nextBtn btn-lg pull-right" type="submit">Next <i class="fa fa-chevron-right" aria-hidden="true"></i></button>
+                                                    @*<button type="button" class="btn btn-default"><i class="fa fa-angle-left" aria-hidden="true"></i></button>*@
+                                                    <button class="btn btn-primary nextBtn btn-lg pull-right" ng-disabled="step1.$invalid" type="submit">Next <i class="fa fa-chevron-right" aria-hidden="true"></i></button>
                                                 </div>
                                             </div>
                                         </div>
@@ -556,9 +556,10 @@
                                                 </div>
                                             </div>
                                             <div class="row" ng-repeat="service in serviceInfo">
+
                                                 <div class="col-md-5 col-sm-4 col-xs-12">
 
-                                                    <div class="form-group ">
+                                                    <div class="form-group">
                                                         <input type="text" class="form-control" ng-model="service.serviceName" id="" placeholder="">
                                                     </div>
                                                 </div>
@@ -583,7 +584,8 @@
                                                                 </span>
                                                             </button>
                                                             <ul class="dropdown-menu" style="display:block" aria-labelledby="dLabel" ng-hide="showStaffBinded[$index]">
-                                                                <li>Who can perform this service?</li><li><input type="checkbox" name="" value="" ng-click="togglealldataSelection(service)" ng-model="service.AllAssignStaffChecked"> All Staff</li>
+                                                                <li>Who can perform this service?</li>
+                                                                <li><input type="checkbox" name="" value="" ng-click="togglealldataSelection(service)" ng-model="service.AllStaffChecked"> All Staff</li>
                                                                 <li ng-repeat="item in service.staff">
                                                                     <input type="checkbox" name="selectedFruits[]"
                                                                            value="{{item.staffEmail}}"
@@ -623,9 +625,10 @@
                                                                 </button>
                                                                 <button type="submit" class="btn btn-default" ng-click="addServiceItem()">Add</button>
                                                                 <ul class="dropdown-menu" style="display:block;" aria-labelledby="dLabel" ng-hide="showStaff">
-                                                                    <li>Who can perform this service?</li><li><input type="checkbox" name="" value="" ng-model="allstaffchecked" ng-click="toggleAllSelection()"> All Staff</li>
+                                                                    <li>Who can perform this service?</li>
+                                                                    <li><input type="checkbox" class="staffcheckbox" name="" value="" ng-model="allstaffchecked" ng-click="toggleAllSelection()"> All Staff</li>
                                                                     <li ng-repeat="staff in staffInfo">
-                                                                        <input type="checkbox" ng-click="toggleSelection()" ng-model="staff.confirmed"> {{staff.staffName}}
+                                                                        <input type="checkbox" ng-click="toggleSelection()" class="staffcheckbox" ng-model="staff.confirmed"> {{staff.staffName}}
 
                                                                     </li>
                                                                 </ul>
@@ -634,8 +637,6 @@
                                                     </div>
                                                 </div>
                                             </div>
-
-
                                         </div>
                                     </div>
                                 </div>
@@ -651,24 +652,10 @@
     <script>
         $(document).ready(function () {
 
-            //$(".nextBtn").click(function () {
-            //    debugger;
-            //    var element = $(".stepwizard a.btn-primary");
-
-
-            //    //$(element).next().find("a.btn-default").click();
-            //    nexttab(element);
-            //});
-
-            //function nexttab(ele)
-            //{
-            //    $(ele).next().find(".stepwizard a.btn-default").click();
-            //}
             var navListItems = $('div.setup-panel div a'),
                     allWells = $('.setup-content'),
                     allNextBtn = $('.nextBtn');
 
-            // allWells.hide();
 
             navListItems.click(function (e) {
                 e.preventDefault();
@@ -676,31 +663,11 @@
                         $item = $(this);
 
                 if (!$item.hasClass('disabled')) {
-                    //navListItems.removeClass('btn-primary').addClass('btn-default');
-                    //$item.addClass('btn-primary');
-                    //  allWells.hide();
                     $target.show();
                     $target.find('input:eq(0)').focus();
                 }
             });
-            //allNextBtn.click(function () {
-            //    var curStep = $(this).closest(".setup-content"),
-            //        curStepBtn = curStep.attr("id"),
-            //        nextStepWizard = $('div.setup-panel div a[href="#' + curStepBtn + '"]').parent().next().children("a"),
-            //        curInputs = curStep.find("input[type='text'],input[type='url']"),
-            //        isValid = true;
 
-            //    $(".form-group").removeClass("has-error");
-            //    for (var i = 0; i < curInputs.length; i++) {
-            //        if (!curInputs[i].validity.valid) {
-            //            isValid = false;
-            //            $(curInputs[i]).closest(".form-group").addClass("has-error");
-            //        }
-            //    }
-
-            //    if (isValid)
-            //        nextStepWizard.removeAttr('disabled').trigger('click');
-            //});
             $('div.setup-panel div a.btn-primary').trigger('click');
         });
     </script>
